# ignis

./: README.md  pyproject.toml
ignis/services/hyprland/: service.py
ignis/widgets/: window.py
