[project]
name = 'ignis'
version = '0.3.dev0'
description = 'A modern widget system'
readme = 'README.md'
license = {file = 'LICENSE'}
authors = [
  {name = 'linkfrg'},
]


[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'setuptools']

[tool.meson-python.args]
install = ['--skip-subprojects']

[tool.setuptools]
py-modules = []

[tool.mypy]
python_version = "3.10"
packages = ["ignis"]
exclude = ["venv"]
disable_error_code = [
    "no-redef",  # allow variable redefinition (needed for GObject.Property decorator)
    "method-assign"  # also needed for GObject.Property
]
mypy_path = ["stubs"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["gi.repository.*"]
disable_error_code = ["assignment"]
